# nck

./: Cargo.toml  bacon.toml  crates.nix  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.helix/: languages.toml
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs  read.rs  write.rs
crates/cli/: Cargo.toml
crates/cli/src/: archive.rs  hash.rs  main.rs
crates/cli/src/archive/: create.rs
crates/core/: Cargo.toml
crates/core/src/: base32.rs  hashing.rs  io.rs  lib.rs  pool.rs  spec.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: axum_extensions.rs  build.rs  frontend.rs  main.rs  routes.rs  serve.rs  settings.rs  spec.rs  spec_builder.rs  store.rs  string_types.rs
crates/daemon/src/frontend/: build.rs  serve.rs  specs.rs
crates/daemon/src/routes/: url_types.rs
crates/daemon/src/runtime/: linux.rs
crates/daemon/src/runtime/linux/: channel.rs  fork.rs  process.rs  user_ns.rs
crates/daemon/src/runtime/linux/process/: main_process.rs  sandbox_process.rs  supervisor_process.rs  zygote_process.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: base32.rs  lib.rs  supported.rs
crates/io/: Cargo.toml
crates/io/src/: bytes_ext.rs  fs.rs  lib.rs  pool.rs
crates/lang/: Cargo.toml
crates/lang/src/: lib.rs  parser.rs
crates/lang/src/parser/: grammar.pest  ident.rs  lexer.rs  location.rs  number.rs
crates/lang/src/parser/lexer/: ident.rs  keywords.rs  number.rs  operators.rs  strings.rs  surrounds.rs
crates/nck-daemon/: Cargo.toml
crates/nck-daemon/src/: main.rs
crates/nck-sandbox/: Cargo.toml
crates/nck-sandbox/src/: lib.rs  linux.rs
crates/nck-sandbox/src/linux/: README.md  controller.rs  proto.rs  sandbox.rs  syscall.rs  zygote.rs
crates/nck-sandbox/src/linux/controller/: id_allocator.rs
crates/nck-sandbox/src/linux/zygote/: proto.rs
crates/nck-util/: Cargo.toml
crates/nck-util/src/: base32.rs  io.rs  lib.rs  pool.rs  transport.rs
crates/nck-util/src/pool/: owned_pooled_item.rs  pooled_item.rs
crates/npk/: Cargo.toml
crates/npk-build/: Cargo.toml
crates/npk-build/.cargo/: config.toml
crates/npk-build/src/: ipc.rs  main.rs  sandbox.rs
crates/npk-build/src/ipc/: proto.rs
crates/npk-build/src/sandbox/: linux.rs
crates/npk-build/src/sandbox/linux/: child.rs  fs.rs  parent.rs  proc.rs  user.rs
crates/npk-daemon/: Cargo.toml
crates/npk-daemon/src/: main.rs
crates/npk-sandbox/: Cargo.toml
crates/npk-sandbox/src/: lib.rs  linux.rs  unix.rs
crates/npk-sandbox/src/linux/: README.md  controller.rs  proto.rs  sandbox.rs  syscall.rs  zygote.rs
crates/npk-sandbox/src/linux/proto/: transport.rs
crates/npk-sandbox/src/linux/zygote/: proto.rs
crates/npk-sandbox/src/unix/: linux.rs
crates/npk-sandbox/src/unix/linux/: README.md  child.rs  config.rs  controller.rs  fs.rs  main_proc.rs  parent.rs  proc.rs  proto.rs  sandbox.rs  supervisor.rs  syscall.rs  user.rs  zygote.rs
crates/npk-sandbox/src/unix/linux/zygote/: proto.rs
crates/npk-util/: Cargo.toml
crates/npk-util/src/: io.rs  lib.rs  pool.rs  thread.rs  transport.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  linux.rs
crates/sandbox/src/linux/: controller.rs  sandbox.rs  settings.rs  supervisor.rs  syscall.rs  zygote.rs
crates/sandbox/src/linux/controller/: id_allocator.rs
crates/spec/: Cargo.toml
crates/spec/src/: builder.rs  exec.rs  lib.rs  ser.rs
crates/spec/src/ser/: bytestring.rs
notices/: youki
test/: .gitignore  build.sh  test.sh
