[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-core = "0.1"
tokio = "1"
futures = "0.3"
futures-util = "0.3"
tracing-subscriber = "0.3"
serde = "1"
once_cell = "1"
parking_lot = "0.12"
bitflags = "2"
config = "0.13"
flume = "0.11"
dashmap = "5"
blake3 = "1"
bytes = "1"
uuid = "1"
rstest = "0.18"

nck-core = { path = "./crates/core" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
