[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"

parking_lot = "0.12"
dashmap = "5"

tokio = {version = "1", default-features = false}
futures = "0.3"

bytes = "1"
bitflags = "2"
uuid = "1"
rand = "0.8"
blake3 = "1"
url = "2.5"

serde = "1"
serde_test = "1"
toml = "0.8"
serde_json = "1.0.108"
config = "0.13"

derive_more = "0.99.17"
castaway = "0.2.2"

rstest = "0.18"
pretty_assertions = "1"

nck-io = { path = "./crates/io" }
nck-hashing = { path = "./crates/hashing" }
nck-archive = { path = "./crates/archive" }
nck-spec = { path = "./crates/spec" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
