[package]
name = "nck"
description = "Nickelpack CLI - Active WIP"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
nck-archive.workspace = true
nck-hashing.workspace = true

tokio = {workspace = true, features = ["io-util", "time", "sync", "rt", "net", "macros", "fs", "rt-multi-thread"]}
anyhow.workspace = true

clap = {version = "4", default-features=false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
argfile = "0.1"
# nickel-lang-core = "0.2.0"

