[package]
name = "nck"
description = "Nickelpack CLI - Active WIP"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
nck-archive.workspace = true
nck-hashing.workspace = true

tokio = { workspace = true, features = ["io-util", "time", "sync", "rt", "net", "macros", "fs", "rt-multi-thread"] }
anyhow.workspace = true

clap = { workspace = true, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
argfile.workspace = true
