[package]
name = "nck-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nck-sandbox.workspace = true
nck-core.workspace = true

color-eyre.workspace = true
tokio = {workspace = true, features = ["io-util", "time", "sync", "rt", "net", "macros", "fs"]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
config.workspace = true
blake3.workspace = true
serde.workspace = true
dashmap.workspace = true
uuid = { workspace = true, features = [ "v4", "fast-rng" ] }
futures.workspace = true
thiserror.workspace = true

axum = { version = "0.7", default-features = false, features = [ "http1", "tokio", "query" ] }
axum-core = "0.4"
tower-service = "0.3"
tower-http = { version="0.5", default-features = false, features = [ "trace" ]}
hyper-util = "0.1"
hyper = "1"

rand = "0.8"
