[package]
name = "nck-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nck-core.workspace = true

anyhow.workspace = true
tokio = {workspace = true, features = ["io-util", "time", "sync", "rt", "net", "macros", "fs"]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
config.workspace = true
blake3.workspace = true
serde.workspace = true
dashmap.workspace = true
uuid = { workspace = true, features = [ "v4", "fast-rng" ] }
futures.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bytes.workspace = true

axum = { version = "0.7", default-features = false, features = [ "http1", "tokio", "query" ] }
axum-core = "0.4"
tower-service = "0.3"
tower-http = { version="0.5", default-features = false, features = [ "trace" ]}
hyper-util = "0.1"
hyper = "1"

rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
prctl = "1"
signal-hook = "0.3"
postcard = { version = "1.0", default-features = false, features = [ "use-std", "alloc" ] }

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.27"
features = [
  "mount",
  "fs",
  "sched",
  "signal",
  "socket",
  "term",
  "uio",
  "dir",
  "user",
  "hostname",
  "personality",
  "mman",
  "resource"
]
