[package]
name = "nck-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
pretty_assertions.workspace = true
thiserror.workspace = true
bitflags.workspace = true
bumpalo = { workspace = true, features = ["allocator_api", "collections"] }

[dev-dependencies]
once_cell.workspace = true
