[package]
name = "nck-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nck-sandbox.workspace = true
nck-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "time", "macros", "io-util", "process" ] }
serde = { workspace = true }
config.workspace = true
dashmap.workspace = true
rand.workspace = true

axum = {version = "0.7", default-features = false, features = [ "http1", "tokio"] }
blake3 = "1"
