[package]
name = "nck-util"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
tokio = {workspace = true, features = ["io-util", "time", "sync", "rt", "net", "macros"]}
rand.workspace = true
tracing.workspace = true
once_cell.workspace = true
flume.workspace = true
crc.workspace = true
futures-sink.workspace = true
speedy.workspace = true
dashmap.workspace = true

bytes = "1"
