[package]
name = "npk-build"
version = "0.1.0"
edition = "2021"

[build-dependencies]
capnpc = "0.18.0"

[dependencies]
anyhow.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "time", "macros" ] }
tokio-util = { workspace = true, features = [ "compat" ] }
futures.workspace = true
derive_more.workspace = true
once_cell.workspace = true

prctl = "1"
async-lock = "3"
bitcode = "0.5"
crc = "3"
procfs = "0.16"
flume = "0.11"

[dependencies.nix]
version = "0.27"
optional = true
features = [
  "mount",
  "fs",
  "sched",
  "signal",
  "socket",
  "term",
  "uio",
  "dir",
  "user",
  "hostname",
  "personality"
]

[features]
default = ["nix"]
nix = ["dep:nix"]
