[package]
name = "npk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
npk-sandbox.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "time", "macros", "io-util", "process" ] }
config.workspace = true

async-walkdir = "0.2"
futures-lite = "1"
