[package]
name = "npk-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
npk-util.workspace = true
thiserror.workspace = true
rand.workspace = true
tracing = { workspace = true, features = [ "attributes"] }
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "time", "macros", "io-util", "fs", "sync" ] }
serde = { workspace = true, features = [ "derive"] }
bitflags = { workspace = true, features = [ "serde" ] }
config.workspace = true
flume.workspace = true
lockfree-object-pool.workspace = true
once_cell.workspace = true

bitcode = "0.5"
crc = "3"
bytes = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
prctl = "1"
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.27"
features = [
  "mount",
  "fs",
  "sched",
  "signal",
  "socket",
  "term",
  "uio",
  "dir",
  "user",
  "hostname",
  "personality"
]
