[package]
name = "nck-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
nck-core.workspace = true

thiserror.workspace = true
rand.workspace = true
tracing = { workspace = true, features = [ "attributes"] }
tokio = { workspace = true, features = [ "net", "rt", "rt-multi-thread", "time", "macros", "io-util", "fs", "sync" ] }
serde = { workspace = true, features = [ "derive"] }
bitflags = { workspace = true, features = [ "serde" ] }
flume.workspace = true
once_cell.workspace = true
blake3.workspace = true
bytes.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
prctl = "1"
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.27"
features = [
  "mount",
  "fs",
  "sched",
  "signal",
  "socket",
  "term",
  "uio",
  "dir",
  "user",
  "hostname",
  "personality"
]
