[package]
name = "nck-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
nck-hashing.workspace = true
nck-io.workspace = true

blake3.workspace = true
thiserror.workspace = true
serde = {workspace = true, features = ["derive"]}
bytes.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_test.workspace = true
anyhow.workspace = true
toml.workspace = true
